# pareto_dp

./: Cargo.toml  LICENSE  PUBLISH.md  README.md  pyproject.toml  scratch.py
.github/workflows/: CI.yml
python/pareto_dp/: __init__.py  __init__.pyi  pareto_dp.pyi
src/: lib.rs  pareto.rs
tests/: test_pareto_dp.py
