[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "pareto_dp"
description = "Multi-objective optimization using dynamic programming to find Pareto-optimal solutions"
requires-python = ">=3.9"
authors = [
    {name = "txart"},
]
license = {text = "MIT"}
keywords = ["optimization", "pareto", "multi-objective", "dynamic-programming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = {Homepage = "https://github.com/Txart/pareto_dp", Repository = "https://github.com/Txart/pareto_dp"}
readme = "README.md"
dynamic = ["version"]
